完善可以修改自己的问题

--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -21,6 +21,7 @@
             <hr>
 
             <form action="/publish" method="post">
+                <input type="hidden" name = "id" th:value="${id}">
                 <div class="form-group">
                     <label for="title">问题标题（简单扼要）:</label>
                     <input type="text" class="form-control" th:value="${title}" id="title" name="title"
