评论可以显示在页面上

--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -25,8 +25,10 @@ body {
     margin-top: 15px;
 }
 .community-menu {
+    display: block;
     color: #999;
     font-size: 13px;
+    margin-bottom: 15px;
 }
 .jumbotron{
     margin:50px;
@@ -41,4 +43,28 @@ body {
 .btn-comment {
     float: right;
     margin-bottom: 10px;
+}
+.comments {
+    padding-bottom: 5px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #eee;
+}
+
+.comment-sp {
+    margin-top: 0;
+}
+
+.menu {
+    color: #999;
+    margin-top: 5px;
+}
+
+.menu .icon {
+    margin-right: 6px;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.menu .icon:hover {
+    color: #499ef3;
 }
