--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -27,6 +27,21 @@ body {
 .question-title{
     margin-top: 25px;
 }
+.question-tag {
+    margin-right: 5px;
+}
+
+.question-related {
+    line-height: 20px;
+    font-size: 12px;
+    margin-left: 0;
+    list-style: none;
+    padding-left: 0;
+}
+
+.question-wechat {
+    width: 100%;
+}
 .community-menu {
     display: block;
     color: #999;
