--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -108,4 +108,14 @@ body {
     color: #499ef3;
 }
 
+.publish-tag-tab {
+    display: none;
+    margin-top: 10px;
+    padding-top: 10px;
+}
+
+.publish-tag-tab .label-info {
+    margin-right: 10px;
+}
+
 
