feat:标签标签，功能还是有缺陷

--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -43,7 +43,6 @@ body {
     width: 100%;
 }
 .community-menu {
-    display: block;
     color: #999;
     font-size: 13px;
     margin-bottom: 15px;
@@ -115,7 +114,9 @@ body {
 }
 
 .publish-tag-tab .label-info {
-    margin-right: 10px;
+    white-space: normal;
+    margin: 5px 5px;
+    display: inline-block;
 }
 
 
