--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -118,5 +118,23 @@ body {
     margin: 5px 5px;
     display: inline-block;
 }
+.community-tag:hover {
+    background-color: #339dff;
+    color: #fff !important;
+    text-decoration-line: none;
+}
 
+.community-tag {
+    text-decoration-line: none;
+    cursor: pointer;
+    display: inline-block;
+    height: 20px;
+    line-height: 16px;
+    padding: 2px 5px;
+    background-color: #99cfff;
+    font-size: 12px;
+    color: #fff !important;
+    border-radius: 4px;
+    margin: 4px;
+}
 
